Fixing Pilota image's spacing.

--- a/css/index.css
+++ b/css/index.css
@@ -591,9 +591,9 @@
       margin-left: 0vw;
     }
     .pilota {
-      max-width: 114%;
+      max-width: 110%;
       margin-top: 1vw;
-      margin-left: -5vw;
+      margin-left: -4vw;
     }
     .cress {
       max-width: 124%;
